tomcat/kubernetes/tomcat8-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat8-svc
  namespace: default
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
  selector:
    app: tomcat8
    #version: v1
